Created ACharacterBase cpp Class

--- a/.gitattributes
+++ b/.gitattributes
@@ -36,27 +36,25 @@
 #*.txt -text -filter -merge -diff
 
 
-/* 
-Notes:
-Asset Files: Unreal Engine asset files (.uasset, .umap) are typically large and are best managed with Git LFS.
 
-Graphics Files: Common image formats, model files, and Adobe files are included.
+#Notes:
+#Asset Files: Unreal Engine asset files (.uasset, .umap) are typically large and are best managed with Git LFS.
 
-Audio and Video Files: Common audio and video formats are tracked to handle potentially large file sizes.
+#Graphics Files: Common image formats, model files, and Adobe files are included.
 
-Animation Files: Animation-specific formats like .anim (for custom animation files) are included.
+#Audio and Video Files: Common audio and video formats are tracked to handle potentially large file sizes.
 
-Other Binaries: Generic binary formats are also tracked.
+#Animation Files: Animation-specific formats like .anim (for custom animation files) are included.
 
-Exclusions: Theres a commented-out example for excluding certain file types from LFS tracking. You can uncomment and adjust it to fit your needs.
+#Other Binaries: Generic binary formats are also tracked.
 
-Customization:
-Tailor to Your Project: Depending on the specific assets and file types your project uses, you may need to add or remove entries.
+#Exclusions: Theres a commented-out example for excluding certain file types from LFS tracking. You can uncomment and adjust it to fit your needs.
 
-Initial Setup: Remember to set up this .gitattributes file before adding large files to ensure theyre correctly managed by Git LFS.
+#Customization:
+#Tailor to Your Project: Depending on the specific assets and file types your project uses, you may need to add or remove entries.
 
-Git LFS Initialization: Ensure that Git LFS is initialized in your repository (git lfs install) before you start adding files.
+#Initial Setup: Remember to set up this .gitattributes file before adding large files to ensure theyre correctly managed by Git LFS.
 
-This .gitattributes file should provide a good starting point for most basic Unreal Engine 5 game projects, ensuring that large files are efficiently managed and version-controlled with Git LFS.
-*/
-``` 
+#Git LFS Initialization: Ensure that Git LFS is initialized in your repository (git lfs install) before you start adding files.
+
+#This .gitattributes file should provide a good starting point for most basic Unreal Engine 5 game projects, ensuring that large files are efficiently managed and version-controlled with Git LFS.
